--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,13 +46,17 @@ android {
 }
 
 dependencies {
-
+    implementation platform('com.google.firebase:firebase-bom:25.12.0')
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
     implementation 'androidx.recyclerview:recyclerview-selection:1.0.0'
+
+    // Coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.1.1'
 
     // Navigation UI
     def navigation_version = '2.3.1'
@@ -70,10 +74,10 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:18.1.0'
 
     // Firebase
-    implementation 'com.google.firebase:firebase-analytics:17.6.0'
-    implementation 'com.google.firebase:firebase-database:19.5.0'
-    implementation 'com.google.firebase:firebase-auth:19.4.0'
-    implementation 'com.google.firebase:firebase-storage:19.2.0'
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-database-ktx'
+    implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation 'com.google.firebase:firebase-storage-ktx'
 
     // Glide
     def glide_version = '4.11.0'
@@ -90,10 +94,6 @@ dependencies {
     implementation "com.google.dagger:dagger-android-support:$dagger_version"
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
     kapt "com.google.dagger:dagger-android-processor:$dagger_version"
-
-    // RxJava
-    // def rxjava_version = '3.0.6'
-    //implementation "io.reactivex.rxjava3:rxjava:$rxjava_version"
 
     // ViewModel and LiveData
     def lifecycle_version = '2.2.0'
