--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,9 +79,9 @@ dependencies {
 
     // Firebase
     implementation 'com.google.firebase:firebase-analytics-ktx'
-    implementation 'com.google.firebase:firebase-database-ktx'
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.google.firebase:firebase-storage-ktx'
+    implementation 'com.google.firebase:firebase-firestore-ktx'
 
     // Glide
     def glide_version = '4.11.0'
