--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,9 +109,12 @@ dependencies {
 
 
     testImplementation 'junit:junit:4.13.1'
+
     testImplementation 'org.mockito:mockito-core:3.3.3'
     testImplementation 'androidx.arch.core:core-testing:2.1.0'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.4'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test:rules:1.3.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+
 }
