--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Billit">
-        <activity android:name=".ui.main.BillDetailsActivity"></activity>
+        <activity android:name=".ui.main.BillDetailsActivity"/>
         <!-- Facebook init -->
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
