--- a/app/build.gradle
+++ b/app/build.gradle
@@ -125,6 +125,9 @@ dependencies {
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     androidTestImplementation 'androidx.test:rules:1.3.0'
+    androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
 
+    testImplementation "androidx.test.ext:truth:1.3.1-alpha02"
+    testImplementation "io.mockk:mockk:1.10.2"
 }
