--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,24 +1,21 @@
-plugins {
-    id 'com.android.application'
-    id 'kotlin-android'
-    id 'kotlin-android-extensions'
-    id 'kotlin-kapt'
-    id 'com.google.gms.google-services'
-    id("scabbard.gradle") version "0.4.0"
-}
+apply plugin: Plugins.androidApplication
+apply plugin: Plugins.kotlinAndroid
+apply plugin: Plugins.kotlinKapt
+apply plugin: Plugins.kotlinAndroidExtensions
+apply plugin: Plugins.googleServicesPlugin
 
 android {
-    compileSdkVersion 29
-    buildToolsVersion "29.0.3"
+
+    compileSdkVersion Configs.compileSdkVersion
 
     defaultConfig {
-        applicationId "com.fernando.billit"
-        minSdkVersion 26
-        targetSdkVersion 29
-        versionCode 1
-        versionName "1.0"
+        applicationId Configs.applicationId
+        minSdkVersion Configs.minSdkVersion
+        targetSdkVersion Configs.targetSdkVersion
+        versionCode Configs.versionCode
+        versionName Configs.versionName
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner Configs.testInstrumentationRunner
     }
 
     buildTypes {
@@ -27,18 +24,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     kotlinOptions {
         jvmTarget = '1.8'
     }
-
-    // Used to show the Dagger components tree
-    //scabbard {
-    //enabled = true
-    //}
 
 //    externalNativeBuild {
 //        cmake {
@@ -57,77 +51,76 @@ android {
 
 dependencies {
     implementation platform('com.google.firebase:firebase-bom:25.12.0')
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.2.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'androidx.recyclerview:recyclerview-selection:1.0.0'
+//    
+//    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.4.10"
+//    implementation 'androidx.core:core-ktx:1.3.2'
+//    implementation 'androidx.appcompat:appcompat:1.2.0'
+//    implementation 'com.google.android.material:material:1.2.1'
+//    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+//    implementation 'androidx.recyclerview:recyclerview-selection:1.0.0'
+//
+//    // Coroutines
+//    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.1"
+//    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.1.1'
+//
+//
+//    // Navigation UI
+//    def navigation_version = '2.3.1'
+//    implementation "androidx.navigation:navigation-fragment-ktx:$navigation_version"
+//    implementation "androidx.navigation:navigation-ui-ktx:$navigation_version"
+//
+//    // Image
+//    implementation "io.coil-kt:coil:0.11.0"
+//
+//    // Gson
+//    implementation 'com.google.code.gson:gson:2.8.6'
+//
+//    // Facebook and Google
+//    implementation 'com.facebook.android:facebook-login:5.15.3'
+//    implementation 'com.google.android.gms:play-services-auth:19.0.0'
+//
+//    // Firebase
+//    implementation 'com.google.firebase:firebase-analytics-ktx'
+//    implementation 'com.google.firebase:firebase-auth-ktx'
+//    implementation 'com.google.firebase:firebase-storage-ktx'
+//    implementation 'com.google.firebase:firebase-firestore-ktx'
+//
+//
+//    // RxJava
+//    def rxAndroid_version = '2.1.1'
+//    implementation "io.reactivex.rxjava2:rxandroid:$rxAndroid_version"
+//
+//    // Dagger2 Core
+//    def dagger_version = '2.29.1'
+//    implementation "com.google.dagger:dagger:$dagger_version"
+//    annotationProcessor "com.google.dagger:dagger-compiler:$dagger_version"
+//
+//    // Dagger Android
+//    implementation "com.google.dagger:dagger-android:$dagger_version"
+//    implementation "com.google.dagger:dagger-android-support:$dagger_version"
+//    kapt "com.google.dagger:dagger-compiler:$dagger_version"
+//    kapt "com.google.dagger:dagger-android-processor:$dagger_version"
+//
+//    // ViewModel and LiveData
+//    def lifecycle_version = '2.2.0'
+//    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+//    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+//    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
 
-    // Coroutines
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.1"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.1.1'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.1'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.1'
+    Dependencies.implementations.forEach {
+        implementation it
+    }
 
-    // Navigation UI
-    def navigation_version = '2.3.1'
-    implementation "androidx.navigation:navigation-fragment-ktx:$navigation_version"
-    implementation "androidx.navigation:navigation-ui-ktx:$navigation_version"
+    Dependencies.kapt.forEach{
+        kapt it
+    }
 
-//    // Rounded image
-//    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    Dependencies.testImplementations.forEach {
+        testImplementation it
+    }
 
-    implementation "io.coil-kt:coil:0.11.0"
+    Dependencies.androidTestImplementation.forEach {
+        androidTestImplementation it
+    }
 
-    // Gson
-    implementation 'com.google.code.gson:gson:2.8.6'
-
-    // Facebook and Google
-    implementation 'com.facebook.android:facebook-login:5.15.3'
-    implementation 'com.google.android.gms:play-services-auth:19.0.0'
-
-    // Firebase
-    implementation 'com.google.firebase:firebase-analytics-ktx'
-    implementation 'com.google.firebase:firebase-auth-ktx'
-    implementation 'com.google.firebase:firebase-storage-ktx'
-    implementation 'com.google.firebase:firebase-firestore-ktx'
-
-
-    // RxJava
-    def rxjava_version = '3.0.6'
-    def rxAndroid_version = '2.1.1'
-//    implementation "io.reactivex.rxjava3:rxjava:$rxjava_version"
-    implementation "io.reactivex.rxjava2:rxandroid:$rxAndroid_version"
-
-    // Dagger2 Core
-    def dagger_version = '2.29.1'
-    implementation "com.google.dagger:dagger:$dagger_version"
-    annotationProcessor "com.google.dagger:dagger-compiler:$dagger_version"
-
-    // Dagger Android
-    implementation "com.google.dagger:dagger-android:$dagger_version"
-    implementation "com.google.dagger:dagger-android-support:$dagger_version"
-    kapt "com.google.dagger:dagger-compiler:$dagger_version"
-    kapt "com.google.dagger:dagger-android-processor:$dagger_version"
-
-    // ViewModel and LiveData
-    def lifecycle_version = '2.2.0'
-    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
-
-
-    testImplementation 'junit:junit:4.13.1'
-
-    testImplementation 'org.mockito:mockito-inline:3.3.3'
-    testImplementation 'androidx.arch.core:core-testing:2.1.0'
-    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    androidTestImplementation 'androidx.test:rules:1.3.0'
-    androidTestImplementation 'androidx.test:runner:1.3.0'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-
-    testImplementation "androidx.test.ext:truth:1.3.1-alpha02"
-    testImplementation "io.mockk:mockk:1.10.2"
 }
